taking care of the codebase: fixing bugs & cleaning up code